# Aether

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  launch_gazebo.sh  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 3d_file.yml  bug_report.yml  config.yml  functionality.yml  test_report.yml
.github/workflows/: run-tests.yml
Aether-firmware_ws/install/: local_setup.sh  setup.sh
Aether-firmware_ws/install/hand_xyz_subscriber_pkg/share/hand_xyz_subscriber_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Aether-firmware_ws/install/hand_xyz_subscriber_pkg/share/hand_xyz_subscriber_pkg/cmake/: hand_xyz_subscriber_pkgConfig.cmake
Aether-firmware_ws/log/: latest_build
Aether-firmware_ws/src/: hand_xyz_subscriber_pkg
config/: robot_arm.rviz
include/: main.h
launch/: robot_arm.launch.py
model/: gui.config  robot_arm.sdf  robot_arm.urdf
ros2_ws/: README.md
ros2_ws/log/: latest_build
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/py_pubsub/launch/: py_pubsub_launch.py
ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
ros2_ws/src/random_xyz_stream/: CMakeLists.txt  package.xml
ros2_ws/src/random_xyz_stream/src/: random_xyz_publisher.cpp  random_xyz_subscriber.cpp  tcp_xyz_bridge.cpp
ros2_ws/src/sample_action_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/sample_action_cpp/launch/: sample_action_cpp_launch.xml
ros2_ws/src/sample_action_cpp/src/: sample_action_client.cpp  sample_action_server.cpp
ros2_ws/src/sample_action_interface/: CMakeLists.txt  package.xml
ros2_ws/src/sample_action_interface/action/: Fibonacci.action
ros2_ws/src/sample_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/sample_srvcli/launch/: sample_srvcli_launch.xml
ros2_ws/src/sample_srvcli/src/: sample_client.cpp  sample_server.cpp
ros2_ws/src/sample_topic/: CMakeLists.txt  package.xml
ros2_ws/src/sample_topic/launch/: sample_topic_launch.xml
ros2_ws/src/sample_topic/src/: sample_publisher.cpp  sample_subscriber.cpp
scripts/: host_webcam_stream.py  open_host_gazebo_gui.sh  run_cpp_tests.sh  run_gazebo_gui.sh  run_host_gazebo_full.sh  run_pytests.sh  run_webcam_pipeline.sh  tcp_xyz_receiver.py
src/: GrabbingMotion.py  GrabbingMotion2.py  MultiHandTracker.py  WristDetection.py  aether_logger.py  base_rotation.py  main.c  main.py  main2.py  utils.py  wristturn.py  xy_coordinate.py  z_coordinate.py
tests/: sample_test.cpp  test_pytests.py
(+13 files in other folders)
